# dive-into-langgraph-en

./: .env.example  .gitignore  1.quickstart.ipynb  10.rag.ipynb  11.web_search.ipynb  12.deep_agents.ipynb  13.gradio_app.ipynb  14.langgraph_cli.ipynb  2.stategraph.ipynb  3.middleware.ipynb  4.human_in_the_loop.ipynb  5.memory.ipynb  6.context.ipynb  7.mcp_server.ipynb  8.supervisor.ipynb  9.parallelization.ipynb  CLAUDE.md  README.md  langgraph.json  myst.yml  requirements.txt  simple_agent.py
.github/workflows/: deploy-book.yml
app/: .env.example  Dockerfile  README.md  app.py  docker-compose.yml  docker.conf  pyproject.toml  requirements.txt
app/config/: mcp_config.py
app/docs/: README-en.md  ollama.md  query.md
app/mcp/: code_execution.py
app/mcp/mcp-server-chart/: README.md
app/prompts/: middleware_todolist.py  prompt_base.py  prompt_enhance.py  subagent_search.py
app/space/: food.md
app/tools/: tool_math.py  tool_role.py  tool_runtime.py  tool_sci.py  tool_search.py
app/utils/: device_info.py  fix_dashscope.py  fix_deepseek.py  remove_html.py  think_view.py  tool_view.py  web_ui.py
book/: home.ipynb
docs/: note.md  plan.md  rule_horror.md
mcp_server/: README.md  mcp_supervisor.conf
mcp_server/get_weather_mcp/: README.md  __main__.py  server.py
mcp_server/math_mcp/: README.md  __init__.py  __main__.py  server.py
tests/: .env.example  docker-compose.yml  redis.conf  test_langmem.py  test_rag.py  test_router.py  test_store.py  test_time_travel.py
