[project]
name = "gradio-agent-app"
version = "0.1.0"
description = "Building a streaming conversational agent based on LangChain"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.25.7",
    "fastmcp>=2.14.2",
    "gradio>=6.3.0",
    "langchain>=1.2.3",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.5",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]
